fixed chats panel scroll issues
I made only the chats scrollable and customized the scrollbar. Made the color lighter on the border right of the panels

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -15,8 +15,8 @@
     width: 60px;
     overflow: hidden;
     padding: 20px 0px;
-    border-right: 1px solid var(--message-receive-600, #686868);
-    background: var(--Color, #FFF);
+    border-right: 1px solid var(--message-receive-200);
+    background:  #FFF;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -43,8 +43,7 @@
     flex-direction: column;
     align-items: flex-start;
     flex-shrink: 0;
-    overflow: auto;
-    margin-bottom: 30px;
+    border-right: 1px solid var(--message-receive-200);
 }
 
 .search-box {
@@ -57,6 +56,7 @@
     align-items: center;
     flex-direction: column;
     z-index: 20;
+    border-right: 1px solid var(--message-receive-200);
 }
 
 .search-holder {
@@ -99,8 +99,8 @@
     display: flex;
     height: 30px;
     padding: 0 10px;
-    border-bottom: 1px solid #000;
-    background: var(--text-100, #FFF);
+    border-bottom: 1px solid var(--message-receive-200);
+    background:  #FFF;
     justify-content: space-between;
     align-items: flex-start;
     align-self: stretch;
@@ -131,8 +131,24 @@
     flex-direction: column;
     align-items: center;
     background: #FFF;
-    height: 80vh;
+    overflow: auto;
+    height: 90vh;
+    padding-bottom: 2px;
+    scrollbar-gutter:stable;
+    scrollbar-width: thin;
 }
+.chats::-webkit-scrollbar {
+    width: 8px;
+}
+.chats::-webkit-scrollbar-thumb {
+    border: 9px solid var(--message-receive-200);
+    border-radius: 100px;
+}
+.chats::-webkit-scrollbar-thumb:hover {
+   border-color: var(--message-receive-300);
+}
+
+
 
 .chat {
     display: flex;
